logs/pylegos.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/inflect-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycnic'...
Listing './lib/python3.5/site-packages/pycnic-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pylegos'...
Compiling './lib/python3.5/site-packages/pylegos/app.py'...
***   File "./lib/python3.5/site-packages/pylegos/app.py", line 148
    def
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylegos/cli'...
Listing './lib/python3.5/site-packages/pylegos/cli/templates'...
Listing './lib/python3.5/site-packages/pylegos/cli/templates/code'...
Listing './lib/python3.5/site-packages/pylegos/cli/templates/config'...
Listing './lib/python3.5/site-packages/pylegos/cli/templates/launchers'...
Listing './lib/python3.5/site-packages/pylegos/database'...
Listing './lib/python3.5/site-packages/pylegos/web'...
Listing './lib/python3.5/site-packages/pylegos-0.2.0a6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/database'...
Listing './lib/python3.5/site-packages/velexio'...
Listing './lib/python3.5/site-packages/velexio/pylegos'...
Listing './lib/python3.5/site-packages/velexio/pylegos/core'...
Listing './lib/python3.5/site-packages/velexio/pylegos/database'...
Listing './lib/python3.5/site-packages/velexio/pylegos/dev'...
Listing './share'...
Listing './share/python-wheels'...
